tests/NormalTests/paczka1/small_fuzzy/67911945.err
Error in line 6: wJo S554 3,0
Error in line 14: vuwDBjzXyy S896 7,4
